06-Kubernetes-manifest/04-web-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Assuming you are using Nginx Ingress Controller
  rules:
  - host: aacf685830e3d4ed5a2b8d38763fd469-1361612369.us-east-1.elb.amazonaws.com  # Use the DNS name of your ELB
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 80
